# cuda-mode-hpr

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
data/: example_cloud_pose.txt
include/: cuda_convex_hull.cu  cuda_convex_hull.hpp  hidden_point_removal.hpp  hidden_point_removal_impl.hpp  preprocess.cu  preprocess.hpp
src/: entrypoint.cpp
